fix: text wrap in header About us

--- a/style.css
+++ b/style.css
@@ -485,6 +485,9 @@ ul {
   padding-left: 1px;
   letter-spacing: 0.15px;
   word-spacing: -2px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-wrap: normal;
 }
 
 .about__inner > h3 {
